src/styles/mobile-style.less
@import "base/variables";
@import "mixins/mixins";
@import "modules/host";

body {
    padding: 1vw;
    background: transparent;
}

.main {
    position: relative;
    padding: 8vw 3vw;
    background: #fff;

    .footer {
        letter-spacing: 3vw;
    }

    &-version {
        position: absolute;
        bottom: 0;
        right: 7px;
        color: #eee;
        font-size: 5vw;
    }

    &-popup {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 5vw;
        box-shadow: 0 0px 5vw 0 rgba(0,0,0,.2);

        &__logo {
            width: 11vw;
            height: 11vw;

            &.adguard-assistant-button-main-logo {
                background-image: url("img/logo.svg");
                background-repeat: no-repeat;
            }
        }

        &__title {
            font-size: 6vw;
            margin: 3vw 0;
        }

        &__content {
            font-size: 5vw;
            padding: 0 3vw;
            margin-bottom: 5vw;
        }

        &__btn {
            font-size: 5vw;
            padding: 2vh 8vw;
            border: 1px solid #dedede;
            border-radius: 3px;
            background: #fff;

            &:hover {
                background-color: #f6f6f6;
            }

            &--green {
                color: #ffffff;
                border: 1px solid #66B574;
                background-color: #66B574;
                box-shadow: none;

                &:hover {
                    background-color: #5ea76b;
                    color: #fff;
                }
            }

            &:focus {
                box-shadow: none;
            }
        }
    }

    &-menu {
        margin: 4vw;
        padding: 4vw;
        display: flex;
        justify-content: space-between;
        border-radius: 2px;
        box-shadow: 0 0 4vw -2px rgba(0,0,0,.3);

        &__btn {
            font-size: 0;
            width: 12vw;
            height: 12vw;
            border: 1px solid #dedede;
            border-radius: 3px;
            background-repeat: no-repeat;
            background-position: 50%;
            background-size: 40%;
            position: relative;
            background-color: #fff;

            &:hover {
                background-color: #d0f0d6;
            }

            &:active, &.active {
                background-color: #66B574;
                box-shadow: inset 2px 2px 3px 0 rgba(92, 92, 92, 0.5);
            }

            &--accept {
                background-image: url(img/check.svg);
            }

            &--preview {
                background-image: url(img/eye-color.svg);

                &:active, &.active {
                    background-image: url(img/eye.svg);
                }
            }

            &--plus {
                background-image: url(img/plus.svg);

                &:active {
                    background-image: url(img/plus.svg);
                }
            }

            &--minus {
                background-image: url(img/minus.svg);

                &:active {
                    background-image: url(img/minus.svg);
                }
            }

            &--close {
                background-image: url(img/cross-color.svg);

                &:active {
                    background-image: url(img/cross.svg);
                }
            }

            &:disabled {
                background-color: #efefef;

                &:after, &:before {
                    opacity: .7;
                }
            }
        }
    }
}

